--- a/enhanced_crud/static/description/index.html
+++ b/enhanced_crud/static/description/index.html
@@ -2,7 +2,7 @@
 	<div class="oe_row oe_spaced">
 		<h2 class="oe_slogan">Enhanced CRUD</h2>
 		<div class="oe_demo oe_screenshot">
-			<img src="../src/img/enhanced_crud_screenshot.png">
+			<img src="enhanced_crud_screenshot.png">
 		</div>
 	</div>
 </section>
@@ -15,12 +15,12 @@
 			<div class="row">
 				<div class="mb16 col-lg-6">
 					<div class="oe_demo oe_screenshot">
-						<img src="../src/img/enhanced_crud_paginator.png">
+						<img src="enhanced_crud_paginator.png">
 					</div>
 				</div>
 				<div class="mb16 col-lg-6">
 					<div class="oe_demo oe_screenshot">
-						<img src="../src/img/enhanced_crud_contextmenu.png">
+						<img src="enhanced_crud_contextmenu.png">
 					</div>
 				</div>
 			</div>
@@ -35,12 +35,12 @@
 			<div class="row">
 				<div class="mb16 col-lg-6">
 					<div class="oe_demo oe_screenshot">
-						<img src="../src/img/enhanced_crud_settings1.png">
+						<img src="enhanced_crud_settings1.png">
 					</div>
 				</div>
 				<div class="mb16 col-lg-6">
 					<div class="oe_demo oe_screenshot">
-						<img src="../src/img/enhanced_crud_settings2.png">
+						<img src="enhanced_crud_settings2.png">
 					</div>
 				</div>
 			</div>
