--- a/enhanced_crud/static/description/index.html
+++ b/enhanced_crud/static/description/index.html
@@ -11,7 +11,7 @@
 	<div class="oe_row oe_spaced">
 		<div class="text-justify">
 			<h3 class="oe_slogan">Overview</h3>
-			<p class="oe_mt32">This module presents the Enhanced CRUD operations in a different way, with Form Views in a new window and a new pager and contextual menu for List and Kanban Views.</p>
+			<p class="oe_mt32">This module presents the Odoo ERP CRUD operations in a different way, with Form Views in a new window and a new pager and contextual menu for List and Kanban Views.</p>
 			<div class="row">
 				<div class="mb16 col-lg-6">
 					<div class="oe_demo oe_screenshot">
