[UPD] format all prettier xml

--- a/code_generator/static/description/index.html
+++ b/code_generator/static/description/index.html
@@ -2,7 +2,7 @@
     <div class="oe_row oe_spaced">
         <h2 class="oe_slogan">Code Generator</h2>
         <div class="oe_demo oe_screenshot">
-            <img src="code_generator_screenshot.png">
+            <img src="code_generator_screenshot.png" />
         </div>
     </div>
 </section>
@@ -13,8 +13,8 @@
             <h3 class="oe_slogan">Overview</h3>
             <p class="oe_mt32">This module let you generate the code for the modules that you create.</p>
             <div class="oe_demo oe_screenshot">
-                <img src="code_generator_elements.png">
-                <img src="code_generator_generate_code.png">
+                <img src="code_generator_elements.png" />
+                <img src="code_generator_generate_code.png" />
             </div>
         </div>
     </div>
@@ -22,8 +22,9 @@
 
 <section class="oe_container oe_dark">
     <h3 class="oe_slogan">Help and Support</h3>
-    <h5 class="oe_slogan" style="font-size: 20px;">Feel free to contact me, if you need any help with your Odoo
-        integration or additional features.</h5>
+    <h5 class="oe_slogan" style="font-size: 20px">
+        Feel free to contact me, if you need any help with your Odoo integration or additional features.
+    </h5>
     <div class="oe_slogan">
         <a class="btn btn-primary btn-lg mt8" href="mailto:bluisknot@gmail.com">
             <i class="fa fa-envelope"></i> Contact Me
