--- a/code_generator_db_servers/static/description/index.html
+++ b/code_generator_db_servers/static/description/index.html
@@ -2,7 +2,7 @@
     <div class="oe_row oe_spaced">
         <h2 class="oe_slogan">Code Generator Db Servers</h2>
         <div class="oe_demo oe_screenshot">
-            <img src="code_generator_db_servers_cfg.png">
+            <img src="code_generator_db_servers_cfg.png" />
         </div>
     </div>
 </section>
@@ -11,10 +11,12 @@
     <div class="oe_row oe_spaced">
         <div class="text-justify">
             <h3 class="oe_slogan">Overview</h3>
-            <p class="oe_mt32">A solution to extend the Code Generator Module by adding the capability to import into
-                Odoo tables and its content from other databases.</p>
+            <p class="oe_mt32">
+                A solution to extend the Code Generator Module by adding the capability to import into Odoo tables and
+                its content from other databases.
+            </p>
             <div class="oe_demo oe_screenshot">
-                <img src="code_generator_db_servers_tables.png">
+                <img src="code_generator_db_servers_tables.png" />
             </div>
         </div>
     </div>
@@ -22,8 +24,9 @@
 
 <section class="oe_container oe_dark">
     <h3 class="oe_slogan">Help and Support</h3>
-    <h5 class="oe_slogan" style="font-size: 20px;">Feel free to contact me, if you need any help with your Odoo
-        integration or additional features.</h5>
+    <h5 class="oe_slogan" style="font-size: 20px">
+        Feel free to contact me, if you need any help with your Odoo integration or additional features.
+    </h5>
     <div class="oe_slogan">
         <a class="btn btn-primary btn-lg mt8" href="mailto:bluisknot@gmail.com">
             <i class="fa fa-envelope"></i> Contact Me
