--- a/enhanced_crud/static/description/index.html
+++ b/enhanced_crud/static/description/index.html
@@ -2,7 +2,7 @@
     <div class="oe_row oe_spaced">
         <h2 class="oe_slogan">Enhanced CRUD</h2>
         <div class="oe_demo oe_screenshot">
-            <img src="enhanced_crud_screenshot.png">
+            <img src="enhanced_crud_screenshot.png" />
         </div>
     </div>
 </section>
@@ -11,17 +11,19 @@
     <div class="oe_row oe_spaced">
         <div class="text-justify">
             <h3 class="oe_slogan">Overview</h3>
-            <p class="oe_mt32">This module presents the Odoo ERP CRUD operations in a different way, with Form Views in
-                a new window and a new pager and contextual menu for List and Kanban Views.</p>
+            <p class="oe_mt32">
+                This module presents the Odoo ERP CRUD operations in a different way, with Form Views in a new window
+                and a new pager and contextual menu for List and Kanban Views.
+            </p>
             <div class="row">
                 <div class="mb16 col-lg-6">
                     <div class="oe_demo oe_screenshot">
-                        <img src="enhanced_crud_paginator.png">
+                        <img src="enhanced_crud_paginator.png" />
                     </div>
                 </div>
                 <div class="mb16 col-lg-6">
                     <div class="oe_demo oe_screenshot">
-                        <img src="enhanced_crud_contextmenu.png">
+                        <img src="enhanced_crud_contextmenu.png" />
                     </div>
                 </div>
             </div>
@@ -36,12 +38,12 @@
             <div class="row">
                 <div class="mb16 col-lg-6">
                     <div class="oe_demo oe_screenshot">
-                        <img src="enhanced_crud_settings1.png">
+                        <img src="enhanced_crud_settings1.png" />
                     </div>
                 </div>
                 <div class="mb16 col-lg-6">
                     <div class="oe_demo oe_screenshot">
-                        <img src="enhanced_crud_settings2.png">
+                        <img src="enhanced_crud_settings2.png" />
                     </div>
                 </div>
             </div>
@@ -51,8 +53,9 @@
 
 <section class="oe_container oe_dark">
     <h3 class="oe_slogan">Help and Support</h3>
-    <h5 class="oe_slogan" style="font-size: 20px;">Feel free to contact me, if you need any help with your Odoo
-        integration or additional features.</h5>
+    <h5 class="oe_slogan" style="font-size: 20px">
+        Feel free to contact me, if you need any help with your Odoo integration or additional features.
+    </h5>
     <div class="oe_slogan">
         <a class="btn btn-primary btn-lg mt8" href="mailto:bluisknot@gmail.com">
             <i class="fa fa-envelope"></i> Contact Me
